--- a/starter_code/templates/forms/new_artist.html
+++ b/starter_code/templates/forms/new_artist.html
@@ -44,8 +44,8 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="facebookLink">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='https://', autofocus = true) }}
+          <label for="facebook_link">Facebook Link</label>
+          {{ form.facebook_link(class_ = 'form-control', placeholder='https://www.facebook.com/', autofocus = true) }}
         </div>
         <div class="form-group">
           <label for="website">Website</label>
@@ -54,7 +54,12 @@
 
         <div class="form-group">
           <label for="seeking_venue">seeking venue? </label>
-          {{ form.seeking_venue(class_ = 'form-control', default="checked" ,autofocus = true) }}
+          {{ form.seeking_venue(class_ = 'form-control' , autofocus = true) }}
+        </div>
+
+        <div class="form-group">
+          <label for="description"> Tell us more about yourself?  </label>
+          {{ form.description(class_ = 'form-control' autofocus = true) }}
         </div>
 
 
